--- a/blocks/services/__list/services__list.css
+++ b/blocks/services/__list/services__list.css
@@ -1,6 +1,6 @@
 .services__list {
     margin: 0 auto;
-    padding-top: 5em;
+    padding: 5em 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 5em;
